--- a/src/App.css
+++ b/src/App.css
@@ -4,5 +4,5 @@
   align-items: center;
   min-height: 100vh;
   padding: 20px;
-  background-color: cadetblue;
+  background-color: rgb(70, 65, 176);
 }
