--- a/src/components/styles/Loader.css
+++ b/src/components/styles/Loader.css
@@ -15,7 +15,7 @@
     width: 7px;
     height: 7px;
     border-radius: 50%;
-    background: #000;
+    background: rgb(20, 11, 40);
     margin: -4px 0 0 -4px;
   }
   .lds-roller div:nth-child(1) {
